# XYZ_interperter

./: README.md  main.py  pyproject.toml  test.xyz  xyzrun  xyzrun.bat
examples/: brainfuck.xyz  env_test.xyz  fibonacci.xyz  hello.xyz  lambda_test.xyz  linked_list.xyz  operators.xyz  parse_test.xyz  shortcircut.xyz  tokenizer_test.xyz
tests/: test_interperter.py  test_interpreter.py  test_simple.py  test_simple_unary.py
xyz/: __init__.py  display.py  env.py  eval.py
xyz/error/: __init__.py  color.py  error.py  source.py
xyz/interpreter/: __init__.py  error.py  helpers.py  interpreter.py  scoped_env.py  types.py
xyz/parser/: TokenIterator.py  __init__.py  ast.py  error.py  grammar.py  parse.py  token_iterator.py  tree.py
xyz/tokenizer/: __init__.py  error.py  tokenize.py  tokens.py
