[project]
name = "xyz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.33",
]

# so that we can import main in tests
[tool.pytest.ini_options]
pythonpath = ["."]
